--- a/tests/test_architectures_notebook.ipynb
+++ b/tests/test_architectures_notebook.ipynb
@@ -7,10 +7,20 @@
    "outputs": [],
    "source": [
     "import copy\n",
+    "import sys\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import torch.optim as optim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.append('d:/gsn-projekt')"
    ]
   },
   {
@@ -460,17 +470,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from amphibian.networks.LSTM import LSTMModel\n",
-    "from amphibian.networks.attention import AttentionModel"
+    "from amphibian.networks import LSTMModel\n",
+    "from amphibian.networks import AttentionModel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,17 +562,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([0.2920, 0.2192, 0.2202], requires_grad=True)"
+       "tensor([ 0.0778, -0.0942,  0.1985], requires_grad=True)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -613,27 +623,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "recurrent_pre.weight_ih_l0 tensor(0.8174)\n",
-      "recurrent_pre.weight_hh_l0 tensor(0.1195)\n",
-      "recurrent_pre.bias_ih_l0 tensor(0.1143)\n",
-      "recurrent_pre.bias_hh_l0 tensor(0.1143)\n",
-      "recurrent_pre.weight_ih_l1 tensor(0.9262)\n",
-      "recurrent_pre.weight_hh_l1 tensor(1.4349)\n",
-      "recurrent_pre.bias_ih_l1 tensor(0.5261)\n",
-      "recurrent_pre.bias_hh_l1 tensor(0.5261)\n",
-      "recurrent_cell_post.weight_ih tensor(2.8797)\n",
-      "recurrent_cell_post.weight_hh tensor(2.3095)\n",
-      "recurrent_cell_post.bias_ih tensor(0.8826)\n",
-      "recurrent_cell_post.bias_hh tensor(0.8826)\n",
-      "fc.weight tensor(1.7004)\n",
-      "fc.bias tensor(0.6380)\n"
+      "recurrent_pre.weight_ih_l0 tensor(0.7805)\n",
+      "recurrent_pre.weight_hh_l0 tensor(0.0834)\n",
+      "recurrent_pre.bias_ih_l0 tensor(0.0545)\n",
+      "recurrent_pre.bias_hh_l0 tensor(0.0545)\n",
+      "recurrent_pre.weight_ih_l1 tensor(0.4803)\n",
+      "recurrent_pre.weight_hh_l1 tensor(0.3908)\n",
+      "recurrent_pre.bias_ih_l1 tensor(0.2090)\n",
+      "recurrent_pre.bias_hh_l1 tensor(0.2090)\n",
+      "recurrent_cell_post.weight_ih tensor(1.0095)\n",
+      "recurrent_cell_post.weight_hh tensor(1.5685)\n",
+      "recurrent_cell_post.bias_ih tensor(0.4283)\n",
+      "recurrent_cell_post.bias_hh tensor(0.4283)\n",
+      "fc.weight tensor(2.6611)\n",
+      "fc.bias tensor(0.7213)\n"
      ]
     }
    ],
@@ -649,17 +659,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([ 0.2020, -0.0618, -0.0469], requires_grad=True)"
+       "tensor([-0.0948,  0.1274, -0.1286], requires_grad=True)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,17 +700,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([-2.6149e-01,  1.4842e-05,  5.5488e-02], requires_grad=True)"
+       "tensor([-0.0343,  0.1388, -0.1967], requires_grad=True)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -754,30 +764,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "w_a tensor(0.1741)\n",
-      "u_a tensor(0.0188)\n",
-      "v_a tensor(0.0480)\n",
-      "recurrent_pre.weight_ih_l0 tensor(0.4393)\n",
-      "recurrent_pre.weight_hh_l0 tensor(0.0607)\n",
-      "recurrent_pre.bias_ih_l0 tensor(0.0657)\n",
-      "recurrent_pre.bias_hh_l0 tensor(0.0657)\n",
-      "recurrent_pre.weight_ih_l1 tensor(0.3176)\n",
-      "recurrent_pre.weight_hh_l1 tensor(0.6208)\n",
-      "recurrent_pre.bias_ih_l1 tensor(0.2742)\n",
-      "recurrent_pre.bias_hh_l1 tensor(0.2742)\n",
-      "recurrent_cell_post.weight_ih tensor(1.4279)\n",
-      "recurrent_cell_post.weight_hh tensor(2.1454)\n",
-      "recurrent_cell_post.bias_ih tensor(0.5945)\n",
-      "recurrent_cell_post.bias_hh tensor(0.5945)\n",
-      "fc.weight tensor(1.8058)\n",
-      "fc.bias tensor(0.4990)\n"
+      "w_a tensor(0.0477)\n",
+      "u_a tensor(0.0136)\n",
+      "v_a tensor(0.0349)\n",
+      "recurrent_pre.weight_ih_l0 tensor(0.3302)\n",
+      "recurrent_pre.weight_hh_l0 tensor(0.0295)\n",
+      "recurrent_pre.bias_ih_l0 tensor(0.0254)\n",
+      "recurrent_pre.bias_hh_l0 tensor(0.0254)\n",
+      "recurrent_pre.weight_ih_l1 tensor(0.2076)\n",
+      "recurrent_pre.weight_hh_l1 tensor(0.3362)\n",
+      "recurrent_pre.bias_ih_l1 tensor(0.1851)\n",
+      "recurrent_pre.bias_hh_l1 tensor(0.1851)\n",
+      "recurrent_cell_post.weight_ih tensor(0.8504)\n",
+      "recurrent_cell_post.weight_hh tensor(1.3007)\n",
+      "recurrent_cell_post.bias_ih tensor(0.4148)\n",
+      "recurrent_cell_post.bias_hh tensor(0.4148)\n",
+      "fc.weight tensor(1.3867)\n",
+      "fc.bias tensor(0.4417)\n"
      ]
     }
    ],
@@ -793,17 +803,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([-0.0390, -0.0107, -0.2104], requires_grad=True)"
+       "tensor([ 0.0422, -0.0320, -0.0024], requires_grad=True)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,17 +844,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([ 0.0163, -0.1729,  0.0629], requires_grad=True)"
+       "tensor([ 0.1051, -0.2304, -0.2687], requires_grad=True)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -898,30 +908,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "w_a tensor(0.0002)\n",
-      "u_a tensor(2.7465e-06)\n",
-      "v_a tensor(3.3846e-05)\n",
-      "recurrent_pre.weight_ih_l0 tensor(0.0968)\n",
-      "recurrent_pre.weight_hh_l0 tensor(0.0025)\n",
-      "recurrent_pre.bias_ih_l0 tensor(0.0009)\n",
-      "recurrent_pre.bias_hh_l0 tensor(0.0009)\n",
-      "recurrent_pre.weight_ih_l1 tensor(0.0127)\n",
-      "recurrent_pre.weight_hh_l1 tensor(0.0086)\n",
-      "recurrent_pre.bias_ih_l1 tensor(0.0110)\n",
-      "recurrent_pre.bias_hh_l1 tensor(0.0110)\n",
-      "recurrent_cell_post.weight_ih tensor(0.0518)\n",
-      "recurrent_cell_post.weight_hh tensor(0.0533)\n",
-      "recurrent_cell_post.bias_ih tensor(0.0636)\n",
-      "recurrent_cell_post.bias_hh tensor(0.0636)\n",
-      "fc.weight tensor(0.1401)\n",
-      "fc.bias tensor(0.1688)\n"
+      "w_a tensor(0.0007)\n",
+      "u_a tensor(2.0892e-05)\n",
+      "v_a tensor(0.0002)\n",
+      "recurrent_pre.weight_ih_l0 tensor(0.1115)\n",
+      "recurrent_pre.weight_hh_l0 tensor(0.0031)\n",
+      "recurrent_pre.bias_ih_l0 tensor(0.0036)\n",
+      "recurrent_pre.bias_hh_l0 tensor(0.0036)\n",
+      "recurrent_pre.weight_ih_l1 tensor(0.0251)\n",
+      "recurrent_pre.weight_hh_l1 tensor(0.0478)\n",
+      "recurrent_pre.bias_ih_l1 tensor(0.0569)\n",
+      "recurrent_pre.bias_hh_l1 tensor(0.0569)\n",
+      "recurrent_cell_post.weight_ih tensor(0.1465)\n",
+      "recurrent_cell_post.weight_hh tensor(0.1932)\n",
+      "recurrent_cell_post.bias_ih tensor(0.1703)\n",
+      "recurrent_cell_post.bias_hh tensor(0.1703)\n",
+      "fc.weight tensor(0.3742)\n",
+      "fc.bias tensor(0.3251)\n"
      ]
     }
    ],
@@ -937,17 +947,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([-0.0390, -0.0107, -0.2104], requires_grad=True)"
+       "tensor([ 0.0422, -0.0320, -0.0024], requires_grad=True)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
