Add testing notebooks

--- a/tests/test_train.ipynb
+++ b/tests/test_train.ipynb
@@ -24,6 +24,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from amphibian.fetch.reader import AmphibianReader\n",
+    "from amphibian.preprocess.adw\n",
+    "from amphibian.preprocess.\n",
     "from amphibian.architectures import RNN_model\n",
     "from amphibian.train import SingleTrainer"
    ]
