--- a/tests/test_train.ipynb
+++ b/tests/test_train.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
     "import sys\n",
     "\n",
+    "from scipy import stats\n",
     "from torchvision import transforms\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
@@ -24,8 +25,8 @@
     "import amphibian.preprocess.preprocessing as preproc\n",
     "from amphibian.fetch.reader import AmphibianReader\n",
     "from amphibian.preprocess.train_test_split import Train_test_split\n",
-    "from amphibian.architectures import RNN_model\n",
-    "from amphibian.train import SingleTrainer"
+    "from amphibian.architectures import RNNModel\n",
+    "from amphibian.train import SingleTrainer, batch_size_dist"
    ]
   },
   {
@@ -37,12 +38,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "WINDOW_WIDTH = 10\n",
-    "BATCH_SIZE = 64"
+    "PARAM_GRID_RNN = {\n",
+    "    'batch_size': batch_size_dist(32, 256),\n",
+    "    'seq_len': stats.randint(10, 11),\n",
+    "    'input_size': stats.randint(50, 51),\n",
+    "    'hidden_size': stats.randint(5, 20),\n",
+    "    'n_outputs': stats.randint(3,4),\n",
+    "    'num_layers': stats.randint(2,3),\n",
+    "    'dropout': stats.uniform(0, 1)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "batch_size 256\n",
+      "seq_len 10\n",
+      "input_size 50\n",
+      "hidden_size 13\n",
+      "n_outputs 3\n",
+      "num_layers 2\n",
+      "dropout 0.5436987381990299\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k,v in PARAM_GRID_RNN.items():\n",
+    "    print(k, v.rvs(size=1)[0])"
    ]
   },
   {
